--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -39,7 +39,6 @@
     <string name="tabhost_textview_append">追号</string>
     <string name="tabhost_textview_union">合买</string>
     <string name="tabhost_textview_present">赠送</string>
-    <string name="tabhost_textview_12xuan2">12选2</string>
     <string name="tabhost_textview_group3">组三</string>
     <string name="tabhost_textview_group6">组六</string>
     <string name="tabhost_textview_randomselect">机选</string>
@@ -206,8 +205,8 @@
     <string name="doubleball">双色球</string>
     <string name="doubleball_selfselect_redselectnumberpanel_title">红球区：</string>
     <string name="doubleball_selfselect_blueselectnumberpanel_title">蓝球区：</string>
-    <string name="doubleball_courageselect_courageselectnumberpanel_title">胆码区：</string>
-    <string name="doubleball_courageselect_tuoselectnumberpanel_title">脱码区：</string>
+    <string name="doubleball_courageselect_courageselectnumberpanel_title">前区胆码：</string>
+    <string name="doubleball_courageselect_tuoselectnumberpanel_title">前区脱码：</string>
     <string name="doubleball_courageselect_blueselectnumberpanel_title">@string/doubleball_selfselect_blueselectnumberpanel_title</string>
 	<string name="doubleball_numberbasket_dialog_title">已选号码</string>
 	<string name="doubleball_numberbasket_dialog_positivebutton">继续选号</string>
@@ -219,7 +218,7 @@
 	<string name="superlotto_courageselect_couragenumberpanel_title">胆码区：</string>
 	<string name="superlotto_courageselect_dragslectnumberpanel_title">拖码区：</string>
 	<string name="superlotto_courageselect_backareaselectnumberpanel_title">@string/superlotto_selfselect_backareaselectnumberpanel_title</string>
-	
+
 	<!-- 福彩3D -->
 	<string name="welfare3d">福彩3D</string>
 
@@ -306,7 +305,7 @@
     <!-- 足彩 -->
 
     <!-- 竞彩篮球 -->
-    
+
     <!-- 共享参数键字符串 -->
     <string name="sharedpreferences_file_key">com.android.ruyicai.appsharedpreferences</string>
     <string name="sharedpreferences_firstlaunch_key">ruyicai.firstlaunch</string>
